fix: fixed dropdown breaks on small screen
close: https://github.com/koreanbots/v2-testing/issues/21

--- a/app.css
+++ b/app.css
@@ -77,6 +77,15 @@ i {
   background: #2e3338 !important;
 }
 
+.scroll-none {
+  -ms-overflow-style: none;
+  scrollbar-width: none;
+}
+
+.scroll-none ::-webkit-scrollbar {
+  display: none;
+}
+
 button {
   outline: none !important;
 }
